# shyft

./: .gitignore  .project  .pydevproject  .spyderworkspace  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  SHyFT.sln  SHyFT.workspace  SHyFT.workspace.mak  TODO.txt  VERSION  build_api.cmd  build_api.sh  build_api_cmake.sh  build_dlib.sh  build_shyft.sh  requirements.txt  set_version.cmd  setup.py  shyft.kdev4
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/: server-config.json
.metadata/.plugins/org.eclipse.equinox.p2.ui.sdk.scheduler/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
api/: .cproject  .project  .spyderproject  CMakeLists.txt  api.cbp  api.cbp.mak  api.cpp  api.h  api.vcxproj  api_pch.cpp  api_pch.h  api_serialization.cpp  api_state.h  hbv_stack.h  pt_gs_k.h  pt_hs_k.h  pt_ss_k.h  time_series.cpp  time_series.h  timeseries.cpp  timeseries.h  ts_serialization.h
api/boostpython/: api.cpp  api_GeoCellData.cpp  api_GeoPoint.cpp  api_actual_evapotranspiration.cpp  api_cell_environment.cpp  api_dtss.cpp  api_gamma_snow.cpp  api_geo_cell_data.cpp  api_geo_point.cpp  api_glacier_melt.cpp  api_hbv_actual_evapotranspiration.cpp  api_hbv_physical_snow.cpp  api_hbv_snow.cpp  api_hbv_soil.cpp  api_hbv_tank.cpp  api_interpolation.cpp  api_kalman.cpp  api_kirchner.cpp  api_precipitation_correction.cpp  api_priestley_taylor.cpp  api_region_environment.cpp  api_routing.cpp  api_skaugen.cpp  api_state.cpp  api_target_specification.cpp  api_time_axis.cpp  api_time_series.cpp  api_utctime.cpp  api_vectors.cpp  boostpython.cbp  boostpython_pch.cpp  boostpython_pch.h  expose.h  expose_statistics.h  hbv_stack.cpp  main.cpp  numpy_boost.hpp  numpy_boost_python.hpp  pt_gs_k.cpp  pt_hps_k.cpp  (+3 more)
api/python/: .project  .pydevproject  Makefile.swig_run  NMakefile.swig_run  __init__.i  api.i  api.python.cbp  api.python.cbp.mak  api.python.vcxproj  hbv_stack.python.vcxproj  numpy.i  pt_gs_k.i  pt_gs_k.python.vcxproj  pt_hps_k.python.vcxproj  pt_hs_k.i  pt_hs_k.python.vcxproj  pt_ss_k.i  pt_ss_k.python.vcxproj
api/python/Test/: .project  .pydevproject  EnkiApiTesting.py  Test.pyproj
build_support/: build_dependencies.sh
cmake/: DownloadAndExtractTarball.cmake
conda-recipe-shyft/: meta.yaml
conda_recipe/: bld.bat  conda_build_config.yaml  meta.yaml
core/: .cproject  .spyderproject  CMakeLists.txt  actual_evapotranspiration.h  bayesian_kriging.h  cell_model.h  compiler_compatiblity.h  core.cbp  core.cbp.mak  core.vcxproj  core.vcxproj.filters  core_archive.h  core_pch.cpp  core_pch.h  core_serialization.cpp  core_serialization.h  dream_optimizer.cpp  dream_optimizer.h  dtss.cpp  dtss.h  dtss_cache.h  dtss_client.cpp  dtss_client.h  dtss_db.h  dtss_msg.h  dtss_url.h  experimental.cpp  experimental.h  expression_serialization.cpp  expression_serialization.h  gamma_snow.h  gaussian_random_field.h  geo_cell_data.h  geo_point.h  glacier_melt.h  hbv_actual_evapotranspiration.h  hbv_physical_snow.h  hbv_snow.h  hbv_snow_common.h  hbv_soil.h  (+42 more)
doc/: Makefile  conf.py  config_files.rst  getting_started.rst  index.rst  introduction.rst  make.bat  orchestration.rst
shyft/: .spyderproject  __init__.py
shyft/api/: CMakeLists.txt  __init__.py  readme.txt
shyft/api/hbv_stack/: __init__.py
shyft/api/pt_gs_k/: __init__.py
shyft/api/pt_hps_k/: __init__.py
shyft/api/pt_hs_k/: __init__.py
shyft/api/pt_ss_k/: __init__.py
shyft/orchestration/: RunConfiguration.py  __init__.py  cell.py  config.py  input_source.py  netcdf.py  orchestration.pyproj  plotting.py  simulator.py  state.py
shyft/orchestration2/: __init__.py  base_config.py  calibrator.py  orchestration2.pyproj  shyft_runner.py  simulator.py  state.py  utils.py
shyft/repository/: arome_data_repository.py  base_repository.py  cell_read_only_repository.py  collection.py  default_state_repository.py  forecast_pt_location.py  generated_state_repository.py  geo_ts_repository_collection.py  gis_data.py  gis_station_data.py  gridpp_data_repository.py  interfaces.py  interpolation_parameter_repository.py  qm_repository.py  raster_cell_file_repository.py  repository.pyproj  smg_data.py  state_repository.py  station_data.py  yaml_config.py  yaml_state_repository.py
shyft/tests/: demo_statkraft_stuff.py  kjela_hbv_demo.py  pt_locations_epsg_32632.yml  test_arome_respository.py  test_camels.py  test_config_simulator.py  test_geo_data_serialization.py  test_geo_ts_repository_collection.py  test_gis_region_model_repository.py  test_netcdf.py  test_netcdf_geo_ts_repository.py  test_netcdf_input_ts_source_repository.py  test_netcdf_region_model_repository.py  test_netcdf_rw.py  test_netcdftime.py  test_opendap_repository.py  test_repository.py  test_simple_simulator.py  test_ssa_geo_ts_repository.py  test_ssa_smg_db.py  test_statkraft_run.py  test_wrf_respository.py  test_yaml_geo_location_repository.py  test_yaml_state_repository.py  tests.pyproj  tistel_demo.py
test/: .cproject  .project  .spyderproject  CMakeLists.txt  Makefile.testupdate  NMakeFile.testupdate  ReadMe.txt  actual_evapotranspiration_test.cpp  actual_evapotranspiration_test.h  api_test.cpp  api_test.h  bayesian_kriging_test.cpp  bayesian_kriging_test.h  calibration_test.cpp  calibration_test.h  cell_builder_test.cpp  cell_builder_test.h  dtss_test.cpp  gamma_snow_test.cpp  gamma_snow_test.h  gaussian_random_field_test.cpp  gaussian_random_field_test.h  glacier_melt_test.cpp  glacier_melt_test.h  gridpp_test.cpp  gridpp_test.h  hbv_actual_evapotranspiration_test.cpp  hbv_actual_evapotranspiration_test.h  hbv_physical_snow_test.cpp  hbv_snow_test.cpp  hbv_snow_test.h  hbv_soil_test.cpp  hbv_soil_test.h  hbv_stack_test.cpp  hbv_stack_test.h  hbv_tank_test.cpp  hbv_tank_test.h  inverse_distance_test.cpp  inverse_distance_test.h  kalman_test.cpp  (+47 more)
test/python/: TestApi.py  TestCalendarAndTime.py  TestGeoPoint.py  TestOrchestration.py  TestTimeSeries.py  model.py  test.python.pyproj
(+417 files in other folders)
